--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdtool"
-version = "0.1.4"
+version = "0.1.5"
 description = "tools for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -14,6 +14,8 @@ classifiers = [
 python = "^3.11"
 dynaconf = "^3.1.12"
 click = "^8.1.3"
+MDAnalysis = "^2.8.0"
+ase = "^3.22.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
@@ -26,8 +28,7 @@ pytest-pylint = "^0.19.0"
 pre-commit = "^3.3.2"
 
 [tool.poetry.scripts]
-extract = "mdtool.extract:main"
-convert = "mdtool.convert:main"
+mdtool = "mdtool.mdtool:cli"
 
 [build-system]
 requires = ["poetry-core"]
