--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdtool"
-version = "0.1.5"
+version = "0.1.6"
 description = "tools for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -16,6 +16,9 @@ dynaconf = "^3.1.12"
 click = "^8.1.3"
 MDAnalysis = "^2.8.0"
 ase = "^3.22.1"
+matplotlib = "^3.9.0"
+yaml = "^1.9.4"
+numpy = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
