--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdtool"
-version = "0.1.6"
+version = "0.1.9"
 description = "tools for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -17,7 +17,7 @@ click = "^8.1.3"
 MDAnalysis = "^2.8.0"
 ase = "^3.22.1"
 matplotlib = "^3.9.0"
-yaml = "^1.9.4"
+pyyaml = "^6.0.1"
 numpy = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
