--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdtool"
-version = "0.1.10"
+version = "0.1.a15"
 description = "tools for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -33,7 +33,7 @@ pytest-pylint = "^0.19.0"
 pre-commit = "^3.3.2"
 
 [tool.poetry.scripts]
-mdtool = "mdtool.mdtool:cli"
+mdtools = "mdtools.mdtools:cli"
 
 [build-system]
 requires = ["poetry-core"]
