--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "mdtool"
-version = "0.1.a15"
+name = "mdkits"
+version = "0.1.a1"
 description = "tools for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -10,7 +10,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.11",
 ]
-repository = "https://github.com/jxxcr/mdtool"
+repository = "https://github.com/jxxcr/mdkits"
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -33,7 +33,7 @@ pytest-pylint = "^0.19.0"
 pre-commit = "^3.3.2"
 
 [tool.poetry.scripts]
-mdtools = "mdtools.mdtools:cli"
+mdkits = "mdkits.mdkits:cli"
 
 [build-system]
 requires = ["poetry-core"]
