--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdkits"
-version = "0.1.a7"
+version = "0.1.3"
 description = "tools for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
