--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ matplotlib = "^3.9.0"
 pyyaml = "^6.0.1"
 Cp2kData = "^0.7.2"
 numpy = "^1.26.4"
+julia = "^0.6.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
