--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdkits"
-version = "1.1.4"
+version = "1.2.0"
 description = "kits for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -23,6 +23,7 @@ Cp2kData = "^0.7.2"
 numpy = "^1.26.4"
 julia = "^0.6.2"
 tidynamics = "^1.1.2"
+pandas = "^2.3.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
