--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mdkits"
-version = "1.2.6"
+version = "1.3.0"
 description = "kits for md or dft"
 readme = "README.md"
 authors = ["jxxcr <jixxcr@qq.com>"]
@@ -24,6 +24,7 @@ numpy = "^1.26.4"
 julia = "^0.6.2"
 tidynamics = "^1.1.2"
 pandas = "^2.3.2"
+pymatgen = "^2025.10.7"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
